# drumbot

rust-cli/: Cargo.toml
rust-cli/src/: api.rs  audio.rs  main.rs
